--- a/frontend/app/src/assets/styles/index.css
+++ b/frontend/app/src/assets/styles/index.css
@@ -30,7 +30,7 @@
   --color-status-completed: #1CC050;
   --color-status-rejected: #EA1776;
 
-  --color-priority-low: #7EFFCE;
+  --color-priority-low: #0ECF86;
   --color-priority-medium: #E3CE34;
   --color-priority-high: #FF7EBC;
 
